# quantconnect-lean-tearsheet-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/: __init__.py  basic_usage.py  cli_examples.sh  custom_metrics.py  with_benchmark.py
src/lean_tearsheet/: __init__.py  cli.py  formats.py  generator.py
tests/: __init__.py  conftest.py  test_cli.py  test_formats.py  test_generator.py
